# SimuRide-Ride-Sharing-Simulation

./: LICENSE  README.md
Rde-sharing-simulation/: BATCH_MATCHING.md  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  build.ps1
Rde-sharing-simulation/include/: Config.h  DispatchLoop.h  Dispatcher.h  Entities.h  Graph.h  Hungarian.h  LinkedList.h  Logger.h  Queue.h  Router.h
Rde-sharing-simulation/src/: Dispatcher.cpp  Router.cpp  main.cpp
Rde-sharing-simulation/tests/: test_core.cpp  test_datastruct.cpp  test_hungarian.cpp
